# buybikeshop-infrastructure

./: .editorconfig  .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  run.sh
apps/: README.md
apps/admin/: .env.example  Dockerfile  README.md  pyproject.toml  version.go
apps/admin/admin/: main.py
apps/admin/admin/core/: service_kratos.py
apps/admin/admin/web/: app.py  di.py  middleware.py  routes.py  templating.py
apps/admin/admin/web/static/css/: app.css
apps/admin/admin/web/templates/: base.html
apps/admin/admin/web/templates/partials/: navbar.html  sidebar.html
apps/admin/admin/web/templates/views/: 500.html  home.html  user-detail.html  users.html
apps/admin/admin/web/views/: home.py  user_detail.py  users.py
apps/admin/app/: main.go
apps/admin/app/api/: api.go  module.go
apps/admin/app/api/controllers/employee/: controller.go  handle_create.go  handle_list.go  handle_patch.go
apps/admin/app/api/employee/: controller.go  module.go
apps/admin/app/cmd/: root.go
apps/admin/app/cmd/commands/: employee_create.go  employee_delete.go  employee_list.go  employee_root.go  http_root.go
apps/admin/app/models/: employee.go
apps/admin/app/observers/: employee.go  module.go  permission.go
apps/admin/app/services/: module.go
apps/admin/app/services/employee/: service.go  validation.go
apps/admin/client/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
apps/admin/client/src/: index.html  styles.css
apps/admin/client/src/app/: app.config.ts  app.ts
apps/admin/client/src/app/core/: index.ts  response.interceptor.ts  store.ts
apps/admin/client/src/app/core/layout/: main.layout.css  main.layout.html  main.layout.ts
apps/admin/client/src/app/core/layout/components/: header.component.ts  sidebar.component.ts  theme-switcher.ts
apps/admin/client/src/app/entities/employee/: index.ts
apps/admin/client/src/app/entities/employee/api/: api.service.ts
apps/admin/client/src/app/entities/employee/form/: index.ts  validation.ts
apps/admin/client/src/app/entities/employee/model/: employee.actions.ts  employee.effects.ts  employee.model.ts  employee.reducer.ts  employee.selectors.ts  index.ts
apps/admin/client/src/app/entities/worker/api/: api.service.ts
apps/admin/client/src/app/entities/worker/model/: index.ts  worker.actions.ts  worker.effects.ts  worker.model.ts  worker.reducer.ts  worker.selectors.ts
apps/admin/client/src/app/pages/: routes.ts
apps/admin/client/src/app/pages/employee/: employee-view-model-resolver.ts  employee.container.ts  index.ts  routes.ts
apps/admin/client/src/app/pages/employee/create-page/: create-page.html  create-page.ts  index.ts
apps/admin/client/src/app/pages/employee/create-page/components/: index.ts
apps/admin/client/src/app/pages/employee/detail-page/: detail-page.html  detail-page.ts
apps/admin/client/src/app/pages/employee/employee-list-page/: employee-list-page.html  employee-list-page.ts  index.ts
apps/admin/client/src/app/pages/employee/list-page/: list-page.html  list-page.ts
apps/admin/client/src/app/pages/static/: routes.ts
apps/admin/client/src/app/pages/static/home-page/: home-page.ts
apps/admin/client/src/app/shared/models/: api.ts
apps/admin/client/src/app/shared/ui/components/: index.ts
apps/admin/config/: config.example.yml  config.local.yml
apps/market/: .env.example  Dockerfile  README.md  pyproject.toml
apps/market/market/: main.py
apps/market/market/core/: connector.py  di.py
apps/market/market/web/: app.py  di.py  routes.py  templating.py
apps/market/market/web/templates/: base.html
apps/market/market/web/templates/partials/: footer.html  navbar.html
apps/market/market/web/templates/views/: home.html  product.html
apps/market/market/web/views/: home.py  product.py
authserver/: README.md  (+1 more)
database/seeder/: README.md  config.yaml  pyproject.toml  raw.sql
database/seeder/resources/: categories.json  departments.json
database/seeder/seeder/: __main__.py  __old__run.py_  __old__seeders.py_  agrs.py  config.py  main.py  seed_customers.py  seed_orders.py  seed_products.py  seeder.py  utils.py
database/seeder/seeder/entities/: __init__.py  departments.py  partners.py
(+368 files in other folders)
