[project]
name = "buybikeshop"
version = "0.1.0"
description = "Root pyproject"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    # database seeder. Fill database with mock products, categories, brands etc.
    "database/seeder",

    # e-commerce platform
    "apps/market",

    # system administration panel
    "apps/admin",

    # generated gRPC stubs
    "gen/grpc_buybikeshop_python",
]

[tool.uv.sources]
seeder = { workspace = true }
grpc-buybikeshop-python = { workspace = true }
market = { workspace = true }
admin = { workspace = true }

[dependency-groups]
dev = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "protobuf>=6.33.6",
]

# [tool.uv.sources]
# core = { workspace = true }
