[project]
name = "admin"
version = "0.0.0"
description = "Project admin. System management administration panel."
readme = "README.md"
dependencies = [
    "punq>=0.7.0",
    "jinja2>=3.1.6",
    "uvicorn",
    "python-dotenv>=1.2.2",
    "starlette>=0.52.1",
    "uvicorn>=0.42.0",
    "requests",

    "ory-kratos-client",

    # internal
    "common_tools",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
common_tools = { workspace = true }