[project]
name = "market"
version = "0.0.0"
description = "Project market. The online store"
readme = "README.md"
dependencies = [
    "uvicorn",
    "python-dotenv>=1.2.2",
    "starlette>=0.52.1",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
